// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loading stories snapshot > DefaultIdle story renders and matches snapshot 1`] = `
<div>
  <div
    class="min-h-screen bg-background"
  />
</div>
`;

exports[`Loading stories snapshot > DesignPreview story renders and matches snapshot 1`] = `
<div>
  <div
    class="min-h-screen bg-background"
  >
    <div
      class="w-full h-full fixed top-0 left-0 bg-background opacity-75 z-50"
      data-testid="loading-overlay"
    >
      <div
        class="flex justify-center items-center mt-[50vh]"
      >
        <div
          class="border-border h-20 w-20 animate-spin rounded-full border-8 border-t-blue-600"
          data-testid="loading-spinner"
        />
      </div>
    </div>
  </div>
</div>
`;
